# NoteLink

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  alembic.ini  docker-compose.yaml  main.py  package-lock.json  pyproject.toml
.github/workflows/: build.yml  check.yml  frontend_check.yml
alembic/: env.py
alembic/versions/: 2024_06_25_1749-504377e11e9b_create_note_model.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  config.js  main.jsx
frontend/src/components/: NoteDetail.jsx  PublicNote.jsx  PublicNotes.jsx
frontend/src/pages/: PublicNotesList.jsx
notelink/api/: __init__.py
notelink/api/auth/: access_token.py  backend.py  dependencies.py  schemas.py  strategy.py  user_manager.py  user_routers.py  users.py
notelink/api/authentication/: backend.py  strategy.py
notelink/api/meee/: users.py
notelink/api/notes/: __init__.py  crud.py  dependencies.py  schemas.py  tasks.py  views.py
notelink/api/tags/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
notelink/api/users/: __init__.py  auth.py  dependencies.py  schemas.py
notelink/auth/: transport.py
notelink/core/: config.py
notelink/core/authentication/: transport.py  user_manager.py
notelink/core/helpers/: cache_helper.py  db_helper.py  elastic_helper.py
notelink/core/models/: __init__.py  access_token.py  base.py  note.py  note_tag_association.py  tag.py  user.py
notelink/core/s3/: __init__.py  client.py
notelink/core/s3_storage/: client.py
notelink/tools/: errors.py  messages.py  utils.py
(+41 files in other folders)
